# MIRMI_robot

./: .gitignore  README.md  Rover_ackermann_v1.17.0.params  analyze_accuracy.py  backup_data.sh  backup_docking_data.sh  frames_2026-03-20_10.10.34.gv  frames_2026-03-25_13.29.54.gv  test.py  test_js.py  test_js2.py
debugging_and_docu/: collect_fmu_topic_interfaces.sh  current_code_structure.md  setup_lidar_netplan.sh
src/LIDAR_station_detection/: README.md  package.xml  setup.cfg  setup.py
src/cmdvel_to_px4/: package.xml  setup.cfg  setup.py
src/docking_test_suite/: README.md  package.xml  setup.cfg  setup.py
src/docking_test_suite/config/: test_config.yaml
src/docking_test_suite/docking_test_suite/: __init__.py  analysis.py  config_loader.py  data_recorder.py  diagnostics.py  gdrive_uploader.py  pose_tf_broadcaster.py  robot_driver.py  test_a_distance.py  test_b_angular.py  test_c_dynamic.py  test_d_environmental.py  transforms.py
src/docking_test_suite/launch/: debug_tools.launch.py  test_a.launch.py  test_b.launch.py  test_c.launch.py  test_d.launch.py  tf_tree.launch.py
src/docking_test_suite/test/: __init__.py
src/gps_position_publisher/: package.xml  setup.cfg  setup.py
src/ir_led_tracker/: package.xml  setup.cfg  setup.py
src/jetson_camera/: package.xml  setup.py
src/litime_bms_ros/: package.xml  setup.cfg  setup.py
src/mirmi_apriltag/: package.xml  setup.cfg  setup.py
src/mirmi_robot_description/: CMakeLists.txt  package.xml
src/pole_detector/: README.md  package.xml  setup.cfg  setup.py
src/px4_arm_service/: package.xml  setup.cfg  setup.py
src/px4_localization_bridge/: package.xml  setup.cfg  setup.py
src/rover_control/: README_DATA_COLLECTION.md  package.xml  setup.py
src/rover_control/rover_control/: circle_cmd_vel_px4.py  cmd_vel_mux_lfi.py  cmd_vel_mux_simple.py  gps_position_pub.py  lfi_logger_node.py  lidar_preprocess_node.py  pole_detector.py
src/station_detection_APRILTAG/: package.xml  setup.cfg  setup.py
src/station_detection_IR/: package.xml  setup.cfg  setup.py
src/station_detection_LIDAR/: README.md  package.xml  setup.cfg  setup.py
(+198 files in other folders)
